--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ remote_theme : mmistakes/minimal-mistakes
 title                    : "ANZU FUTABA"
 title_separator          : "-"
 name                     : "Liberty"
-description              : "The easiest and fastest way to use \"Docker\""
+description              : "The easiest and fastest way to use Docker"
