--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ title                    : "ANZU FUTABA"
 title_separator          : "-"
 name                     : "Liberty"
 description              : "The easiest and fastest way to use Docker"
+
+theme: jekyll-theme-minimal
