--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-theme: jekyll-theme-minimal
+remote_theme : mmistakes/minimal-mistakes
+
 # Welcome to Jekyll!
 #
 # This config file is meant for settings that affect your entire site, values
